Сделал пробную версию

--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Домашнє завдання 10</title>
+
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <h1>Домашнє завдання 10<br />Таймери та проміси</h1>
 
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
-
-    <load src="./partials/footer.html" />
-
-    <script type="module" src="./main.js"></script>
+    <div class="links-container">
+      <a href="/1-timer.html" class="link-timer"
+        >Завдання 1: Таймер зворотного відліку</a
+      >
+      <a href="/2-snackbar.html" class="link-snackbar"
+        >Завдання 2: Генератор промісів (Snackbar)</a
+      >
+    </div>
   </body>
 </html>
