--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
     <h1>Домашнє завдання 10<br />Таймери та проміси</h1>
 
     <div class="links-container">
-      <a href="/1-timer.html" class="link-timer"
+      <a href="./1-timer.html" class="link-timer"
         >Завдання 1: Таймер зворотного відліку</a
       >
-      <a href="/2-snackbar.html" class="link-snackbar"
+      <a href="./2-snackbar.html" class="link-snackbar"
         >Завдання 2: Генератор промісів (Snackbar)</a
       >
     </div>
